# PCBuilderBR

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  nginx.dev.conf  nginx.prod.conf  package.json
.github/workflows/: cd.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_22_1444-e685ef4fb01a_component_and_offer_tables.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/clients/: __init__.py  base.py  container.py  kabum.py
backend/app/core/: config.py  database.py  dependencies.py  logging.py
backend/app/jobs/: __init__.py  update_products_prices.py
backend/app/middlewares/: logging.py
backend/app/models/: __init__.py  component.py
backend/app/routers/: compatibility.py  components.py
backend/app/schemas/: __init__.py  base.py  build.py  component.py
backend/app/services/: compatibility.py  components.py
backend/app/services/compatibility/: __init__.py  service.py
backend/app/services/compatibility/rules/: base.py  cooler_case.py  cpu_motherboard.py  gpu_case.py  psu.py  ram_motherboard.py
backend/app/tests/unit/services/compatibility/rules/: test_cooler_case.py  test_cpu_motherboard.py  test_gpu_case.py  test_psu.py  test_ram_motherboard.py
designs/: Screenshot from 2026-02-15 13-03-46.png~
docs/ADRs/: README.md  adr-0001-use-fastapi-framework.md
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json
infra/: loki-config.yml  promtail-config.yml
scripts/: deploy.sh
(+13 files in other folders)
